overflow-x problem fix

--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -50,7 +50,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  padding: 1rem;
+  padding: 0px;
   gap: 10px;
   align-content: center;
   align-items: stretch;
@@ -58,8 +58,8 @@
   justify-items: center;
   margin: 1rem;
   justify-content: center;
-  padding-right: 3rem;
-  margin: 0 1rem;
+  padding-right: 0px;
+  margin: 0px auto;
   > * {
     max-width: initial;
   }
