--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -399,6 +399,7 @@ p {
 #footer {
   text-align: center;
   padding: 1rem;
+  display: none;
   .container {
     max-width: unset;
     color: $color-reverse;
